[package]
authors = ["Thomas Bonk <tbo@cybo.biz>"]
name = "queryserver"
version = "0.1.0"

[dependencies]
bson = "0.10.0"
clap = "2.27.1"
futures = "0.1.16"
hyper = "0.11.6"
mongodb = "0.3.7"
pretty_env_logger = "0.1.1"
regex = "0.2.2"
serde = "1.0.18"
serde_derive = "1.0.18"
serde_json = "1.0.5"
url = "1.6.0"
